# mlops-practica-icai-miguel-montes

./: .gitignore  Dockerfile.web  app.py  app_web.py  docker-compose.yml  dvc.yaml  main.py  pyproject.toml  requirements.txt  train.py
.dvc/: config
.github/workflows/: cml.yaml  quickstart.yml
k8s/: api-deployment.yaml  deployment.yaml  service.yaml  web-deployment.yaml
notes/: docker.md  dvc.md  google-cloud-GKE.md  kubernetes.md  mlflow.md
utils/: set_mlflow_env.py
