[project]
name = "mlops-practica-icai-miguel-montes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc[s3]>=3.64.0",
    "matplotlib>=3.10.7",
    "mlflow<3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
